src/components/Header/Header.css
/* Platforms container */
.platforms {
  gap: 2rem;
  border-radius: 20px;
  padding: 10px;
}

.nav-list {
  background-color: #2596BE;
  text-align: center;
}

/* Navigation menu */
.nav-menu {
  display: flex;
  list-style: none;
  text-align: center;
  justify-content: space-between;
}

/* Navigation links */
.nav-links {
  color: white;
  text-decoration: none;
  padding: 0px 20px;
  transition: transform 300ms ease-out;
  transform-origin: left center; /* Set the transform origin to the left */
  transform: scale(1); /* Set the initial scale */
}

/* Active navigation link */
.nav_item .active {
  color: #2596BE;
  background: white;
  border-radius: 2.5rem;
  height: 80%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 20px;
  font-weight: 700;
  transition: transform 300ms ease-out;
  transform-origin: left center; /* Set the transform origin to the left */
  transform: scale(1.1); /* Set the initial scale for the active state */
}

/* Expand and shift other buttons to the right when one button is active */
.nav_item .active ~ .nav-links {
  transform: translateX(20px) scale(1); /* Adjust the translation distance to your preference */
}
/* Platforms container */
.platforms {
  gap: 2rem;
  border-radius: 20px;
  padding: 10px;
}

.nav-list {
  background-color: #2596BE;
  text-align: center;
}

/* Navigation menu */
.nav-menu {
  display: flex;
  list-style: none;
  text-align: center;
  justify-content: space-between;
}

/* Navigation links */
.nav-links {
  color: white;
  text-decoration: none;
  padding: 0px 20px;
  transition: transform 300ms ease-out;
  transform-origin: left center; /* Set the transform origin to the left */
  transform: scale(1); /* Set the initial scale */
}

/* Active navigation link */
.nav_item .active {
  color: #2596BE;
  background: white;
  border-radius: 2.5rem;
  height: 80%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 20px;
  font-weight: 700;
  transition: transform 300ms ease-out;
  transform-origin: left center; /* Set the transform origin to the left */
  transform: scale(1.1); /* Set the initial scale for the active state */
}

/* Expand and shift other buttons to the right when one button is active */
.nav_item .active ~ .nav-links {
  transform: translateX(20px) scale(1); /* Adjust the translation distance to your preference */
}

